// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Expandable unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`renders Expandable with JSX markup unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      <h1>
        Lorem ipsum
      </h1>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <h2>
        Suspendisse a sodales nulla, sed semper nisi.
      </h2>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <button>
        Dolor sit amet
      </button>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
      <p>
        Suspendisse a sodales nulla, sed semper nisi.
      </p>
    </div>
  </div>
</div>
`;

exports[`renders Expandable with custom button CSS class unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
  </div>
</div>
`;

exports[`renders Expandable with custom collapse symbol unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
  </div>
</div>
`;

exports[`renders Expandable with custom expand symbol unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
  </div>
</div>
`;

exports[`renders Expandable with custom inner CSS class unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner test"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
  </div>
</div>
`;

exports[`renders Expandable with custom wrapper CSS class unchanged 1`] = `
<div>
  <div
    class="memori-expandable test"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
  </div>
</div>
`;

exports[`renders Expandable with long text unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
  </div>
</div>
`;

exports[`renders Expandable with multiple rows unchanged 1`] = `
<div>
  <div
    class="memori-expandable"
  >
    <div
      class="memori-expandable--inner"
      style="max-height: 9999px;"
    >
      Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi. Suspendisse a sodales nulla, sed semper nisi.
    </div>
  </div>
</div>
`;
